RESOLVED FIXED218732
Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=218732
Summary Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree ...
Andres Gonzalez
Reported 2020-11-09 18:34:02 PST
Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode.
Attachments
Patch (35.60 KB, patch)
2020-11-09 18:49 PST, Andres Gonzalez
no flags
Patch (38.95 KB, patch)
2020-11-10 06:43 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-11-09 18:49:49 PST
Andres Gonzalez
Comment 2 2020-11-10 06:43:43 PST
chris fleizach
Comment 3 2020-11-10 07:41:39 PST
Comment on attachment 413690 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=413690&action=review > Source/WebCore/ChangeLog:11 > + - Added handling of "AXIsOnScreen" attribute to WebAccessibilityOobjectWrapperMac. Spelling error here > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:506 > + bool isVisible() const override { return boolAttributeValue(AXPropertyName::IsVisible); } If we cache this we’ll need to update this value on objects after a scroll event right?
EWS
Comment 4 2020-11-10 11:21:55 PST
Committed r269635: <https://trac.webkit.org/changeset/269635> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413690 [details].
Radar WebKit Bug Importer
Comment 5 2020-11-10 11:22:17 PST
Note You need to log in before you can comment on or make changes to this bug.