Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=218732

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/mac/search-predicate.html.

- Implemented AXIsolatedObject::scrollXXX methods.
- Added handling of "AXIsOnScreen" attribute to WebAccessibilityOobjectWrapperMac.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::performFunctionOnMainThread const):
(WebCore::AXIsolatedObject::scrollToMakeVisible const):
(WebCore::AXIsolatedObject::scrollToMakeVisibleWithSubFocus const):
(WebCore::AXIsolatedObject::scrollToGlobalPoint const):
(WebCore::AXIsolatedObject::performFunctionOnMainThread): Deleted.
(WebCore::AXIsolatedObject::isVisible const): Deleted.
* accessibility/isolatedtree/AXIsolatedObject.h:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Tools:

Exposed isOnScreen method to JS.

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::isOnScreen const):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::isOnScreen const):

LayoutTests:

This test now passes in both isolated tree mode on and off.

* accessibility/mac/search-predicate.html:


Canonical link: https://commits.webkit.org/231425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269635 268f45cc-cd09-0410-ab3c-d52691b4dbfc